Search box on mobile + general search dropdown tweaks…
- Added small amount of padding beneath search box on mobile so it isn’t flush with it’s container
- Made the search dropdown border non-transparent by default on all themes to contain it more clearly
- Restructured how box-shadows render to make the outlines/shadows clearer and cleaner on mobile
- Rounded corners at bottom of seasrch dropdown

--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -54,4 +54,8 @@
   box-sizing: border-box;
   padding: 0 4px;
   background: var(--theme-mobile-background);
+
+  @include phone-portrait {
+    padding-bottom: 4px;
+  }
 }
