--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -7,7 +7,7 @@
 .open {
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
-  box-shadow: inset 0 0 0 1px var(--theme-search-dropdown-border);
+  box-shadow: 0 1px 0 1px var(--theme-search-dropdown-border);
 }
 
 .menu {
@@ -27,17 +27,22 @@
   top: calc($search-bar-height - 1px);
   border-bottom-left-radius: $theme-corner-radius-search;
   border-bottom-right-radius: $theme-corner-radius-search;
-  box-shadow:
-    inset 0 -1px 0 0 var(--theme-search-dropdown-bg),
-    inset 0 -1px 0 1px var(--theme-search-dropdown-border);
+  box-shadow: inset 0 0 0 1px var(--theme-search-dropdown-border);
+
+  &:empty {
+    display: none !important;
+  }
 
   @include phone-portrait {
-    top: calc(100% + 1px);
+    top: 100%;
+    // Add a margin and change to outset shadows for clearer outlining on mobile
+    margin: 0 1px;
+    box-shadow:
+      0 0 0 1px var(--theme-search-dropdown-border),
+      0 1px 4px 1px rgba(0, 0, 0, 0.5);
     overflow-y: auto;
     overscroll-behavior: none;
     max-height: calc(var(--viewport-height) - var(--header-height)) !important;
-    box-shadow: none;
-    border-radius: 0;
   }
 }
 
