Re-instating original search dropdown border colours

--- a/src/app/themes/_theme-neomuna.scss
+++ b/src/app/themes/_theme-neomuna.scss
@@ -64,6 +64,7 @@
   // Search
   --theme-search-bg: rgba(255, 255, 255, 0.15);
   --theme-search-dropdown-bg: var(--theme-fill-modal-actions);
+  --theme-search-dropdown-border: rgba(255, 255, 255, 0.2);
 
   // Items 'polaroid' framed icons
   --theme-item-polaroid: #00c2e3;
