--- a/src/app/themes/_theme.scss
+++ b/src/app/themes/_theme.scss
@@ -59,7 +59,7 @@
   // Search
   --theme-search-bg: rgba(0, 0, 0, 0.4);
   --theme-search-dropdown-bg: var(--theme-fill-modal-actions);
-  --theme-search-dropdown-border: rgba(255, 255, 255, 0.2);
+  --theme-search-dropdown-border: transparent;
 
   // Items
   --theme-item-polaroid: #ddd;
