--- a/src/app/themes/_theme-throneworld.scss
+++ b/src/app/themes/_theme-throneworld.scss
@@ -57,6 +57,7 @@
   // Search
   --theme-search-bg: rgba(0, 0, 0, 0.4);
   --theme-search-dropdown-bg: var(--theme-fill-modal-actions);
+  --theme-search-dropdown-border: rgba(255, 255, 255, 0.2);
 
   // Items
   --theme-item-polaroid: #e3f9db;
