--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -284,6 +284,16 @@ select {
   }
 }
 
+code {
+  position: relative;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 3px;
+  padding: 0 4px;
+  transform: translateY(-4px);
+  bottom: 1px;
+}
+
 .horizontal-swipable {
   touch-action: pan-y;
 }
