Turn sheet close button into a real button

--- a/src/app/dim-ui/Sheet.scss
+++ b/src/app/dim-ui/Sheet.scss
@@ -71,6 +71,7 @@ $control-color: rgba(255, 255, 255, 0.5);
   }
 
   .sheet-close {
+    all: initial;
     z-index: 1;
     position: absolute;
     right: 0;
@@ -86,11 +87,7 @@ $control-color: rgba(255, 255, 255, 0.5);
     &:active,
     &:hover,
     &:focus-visible {
-      color: rgba(255, 255, 255, 1);
-    }
-
-    &.sheet-no-header {
-      right: 8px;
+      color: var(--theme-accent-primary);
     }
   }
 }
