--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -166,7 +166,7 @@ html,
 body {
   // Disable pull to refresh in Android
   overscroll-behavior: none;
-  // Adjust so the anchor we scroll to doesn't end up behind the anchor
+  // Adjust so the anchor we scroll to doesn't end up behind the header
   scroll-padding-top: var(--header-height);
 
   @include phone-portrait {
