Group items with separators

--- a/src/app/inventory-page/StoreBucket.scss
+++ b/src/app/inventory-page/StoreBucket.scss
@@ -10,6 +10,11 @@
   padding: 4px 0 calc(var(--item-margin) + 4px) 0;
   position: relative;
 
+  &.grouped {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   &:empty {
     min-height: 0;
     padding: 0;
@@ -72,5 +77,20 @@
   transition: opacity 0.3s ease-in-out;
   &:hover {
     opacity: 1;
+  }
+}
+
+.vault-group {
+  display: flex;
+  width: 100%;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: var(--item-margin);
+  padding-bottom: var(--item-margin);
+  border-bottom: 1px solid rgba(150, 150, 150, 0.5);
+
+  &:last-of-type {
+    border-bottom: none;
   }
 }
