--- a/src/app/inventory-page/StoreBucket.scss
+++ b/src/app/inventory-page/StoreBucket.scss
@@ -13,7 +13,6 @@
   &.grouped {
     display: flex;
     flex-wrap: wrap;
-    align-items: stretch;
   }
 
   &:empty {
@@ -87,6 +86,12 @@
   align-items: flex-start;
   align-content: flex-start;
   gap: var(--item-margin);
+
+  &.separated {
+    width: 100%;
+    padding-bottom: var(--item-margin);
+    border-bottom: 1px solid rgba(150, 150, 150, 0.5);
+  }
 
   &:last-of-type {
     border-bottom: none;
