--- a/src/app/shell/ErrorPanel.m.scss
+++ b/src/app/shell/ErrorPanel.m.scss
@@ -20,7 +20,7 @@
   }
 }
 
-.twitterLinks {
+.links {
   composes: flexRow from '../dim-ui/common.m.scss';
   flex-wrap: wrap;
   gap: 8px;
@@ -33,7 +33,7 @@
   float: right;
 }
 
-.twitters {
+.socials {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -50,7 +50,6 @@
   position: relative;
   border: 4px solid rgba(255, 255, 255, 0.3);
 
-  [twdiv='yes'],
   iframe {
     width: 100%;
     overflow: auto;
