--- a/src/app/item-popup/ItemPopup.m.scss
+++ b/src/app/item-popup/ItemPopup.m.scss
@@ -139,23 +139,20 @@
   flex-wrap: wrap;
 }
 
-.itemPopup:global(.sheet) {
-  :global(.sheet-header) {
-    padding: 0;
-    border: none;
-  }
-  :global(.sheet-close) {
-    padding: 10px;
-    color: black;
-    opacity: 0.7;
-  }
+.sheetHeader {
+  padding: 0;
+  border: none;
+}
 
-  &.uncommon,
-  &.rare,
-  &.legendary {
-    :global(.sheet-close) {
-      color: var(--theme-text);
-    }
+.sheetClose {
+  padding: 10px;
+  color: black;
+  opacity: 0.7;
+
+  .uncommon &,
+  .rare &,
+  .legendary & {
+    color: var(--theme-text);
   }
 }
 
