--- a/src/app/item-popup/SocketDetails.m.scss
+++ b/src/app/item-popup/SocketDetails.m.scss
@@ -6,20 +6,20 @@
   }
 }
 
-.socketDetailsSheet:global(.sheet) {
+.socketDetailsSheet {
   // This fits 14 plugs + scroll bar
   max-width: 820px;
   margin: 0 auto;
+}
 
-  :global(.sheet-header) h1 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    min-height: 24px;
-    > * {
-      margin-right: 8px;
-      line-height: 0;
-    }
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-height: 24px;
+  > * {
+    margin-right: 8px;
+    line-height: 0;
   }
 }
 
