--- a/src/app/accounts/MenuAccounts.m.scss
+++ b/src/app/accounts/MenuAccounts.m.scss
@@ -13,7 +13,6 @@
     text-decoration: none;
     > div {
       padding: 10px 2rem 10px 1rem;
-      color: var(--theme-text-secondary);
 
       &:hover,
       &:focus {
@@ -36,5 +35,8 @@
 }
 
 .accountName {
-  padding: 2px 2rem 4px 1rem;
+  all: initial;
+  font: inherit;
+  font-size: 12px;
+  color: var(--theme-text-secondary);
 }
