--- a/src/app/dim-ui/Sheet.m.scss
+++ b/src/app/dim-ui/Sheet.m.scss
@@ -1,5 +1,10 @@
 @use '../variables' as *;
 
+// These styles need to be early in the stylesheet so that they can be easily
+// overridden by components.
+// TODO: When we stop supporting Chrome <99 and Safari <15.4, we can use @layer
+// here to fix these cascade issues once and for all.
+
 $control-color: rgba(255, 255, 255, 0.5);
 
 .sheet {
