--- a/src/app/shell/Header.m.scss
+++ b/src/app/shell/Header.m.scss
@@ -186,15 +186,16 @@ $header-height: 44px;
   z-index: 1000;
 
   hr {
-    margin: 4px 0 2px 0;
+    margin: 8px 0 6px 0;
     border: none;
     border-top: 1px solid #333;
   }
 
   h3 {
-    margin: 16px 2rem 0 1rem;
+    margin: 8px 2rem 0 1rem;
     text-transform: uppercase;
     letter-spacing: 1px;
+    max-width: 13em;
   }
 
   .menuItem {
