Move "visible scrollbars" style to a shared class

--- a/src/app/character-tile/StoreHeading.m.scss
+++ b/src/app/character-tile/StoreHeading.m.scss
@@ -9,6 +9,7 @@
 }
 
 .loadoutMenu {
+  composes: visibleScrollbars from '../dim-ui/common.m.scss';
   position: fixed;
   inset: 0 auto auto 0;
   margin: 0;
@@ -20,8 +21,6 @@
   overscroll-behavior: contain;
   background-color: var(--theme-dropdown-menu-bg);
   will-change: transform;
-
-  @include visible-scrollbars;
 
   [role='button'] {
     outline: none;
