--- a/src/app/compare/CompareItem.m.scss
+++ b/src/app/compare/CompareItem.m.scss
@@ -1,9 +1,8 @@
 @use '../variables.scss' as *;
 
 .compareItem {
+  composes: flexColumn from '../dim-ui/common.m.scss';
   border-left: 1px solid rgba(245, 245, 245, 0.25);
-  display: flex;
-  flex-direction: column;
   position: relative;
   // Make sure even if there are no stats that there's enough room to not clip
   // the icon (e.g. for ghosts)
@@ -82,6 +81,7 @@
 }
 
 .close {
+  composes: resetButton from '../dim-ui/common.m.scss';
   width: 32px;
   height: 32px;
   background-size: 16px;
