--- a/src/app/dim-ui/FilterPills.m.scss
+++ b/src/app/dim-ui/FilterPills.m.scss
@@ -37,6 +37,10 @@
     }
   }
 
+  &:focus-visible {
+    border-color: rgba(255, 255, 255, 0.3);
+  }
+
   :global(.app-icon) {
     font-size: 10px;
   }
