--- a/src/app/item-popup/ItemPopupTabs.m.scss
+++ b/src/app/item-popup/ItemPopupTabs.m.scss
@@ -5,6 +5,7 @@
   justify-content: space-around;
 }
 .movePopupTab {
+  composes: resetButton from '../dim-ui/common.m.scss';
   color: hsl(0, 0%, 80%);
   padding: 5px 0 3px;
   cursor: pointer;
