Revert one z-index thing

--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -16,6 +16,7 @@
   border-top: 0;
   background: var(--theme-search-dropdown-bg);
   position: absolute;
+  z-index: 1;
   list-style: none;
   padding: 0;
   left: 0;
