--- a/src/app/loadout-builder/filter/StatConstraintEditor.m.scss
+++ b/src/app/loadout-builder/filter/StatConstraintEditor.m.scss
@@ -6,6 +6,15 @@
   width: 17px;
 }
 
+.grip {
+  opacity: 0.5;
+  font-size: 10px;
+  padding-left: 10px;
+  align-self: stretch;
+  composes: flexRow from '../../dim-ui/common.m.scss';
+  align-items: center;
+}
+
 .ignored {
   opacity: 0.4;
 }
@@ -32,7 +41,6 @@
   composes: flexRow from '../../dim-ui/common.m.scss';
   align-items: center;
   gap: 2px;
-  padding-left: 6px;
 }
 
 .label {
@@ -107,4 +115,8 @@
   &:focus-visible {
     color: var(--theme-accent-primary);
   }
+}
+
+.dragging {
+  outline: 1px solid var(--theme-accent-primary);
 }
