More Seal/Title styling in Records

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -38,6 +38,10 @@ $power: $gold;
 // The in-game color for the shaped weapon icon
 $shaped: #d25336;
 
+// Colors for the titles below guardians' names
+$sealtitle: #e1c2ec;
+$gildedtitle: #f9deb8;
+
 // Color of the item border for masterworks
 $masterwork-border-color: #eade8b;
 $deepsight-border-color: $shaped;
