--- a/src/app/character-tile/CharacterTile.m.scss
+++ b/src/app/character-tile/CharacterTile.m.scss
@@ -139,14 +139,14 @@
 // The currently equipped title (from a seal)
 .title {
   font-style: italic;
-  color: #e1c2ec;
+  color: $sealtitle;
   text-shadow:
     1px 1px 1px rgba(0, 0, 0, 0.5),
     0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .gildedCurrentSeason {
-  color: rgb(249, 222, 184);
+  color: $gildedtitle;
   text-shadow:
     1px 1px 1px rgba(0, 0, 0, 0.5),
     0 0 10px rgba(0, 0, 0, 0.5);
