--- a/src/app/dim-ui/PageWithMenu.m.scss
+++ b/src/app/dim-ui/PageWithMenu.m.scss
@@ -54,8 +54,7 @@
   position: sticky;
   top: calc(var(--header-height) + 8px);
   width: calc(var(--page-with-menu-menu-width) + 8px);
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden auto;
   overscroll-behavior: none;
   max-height: calc(var(--viewport-height) - var(--header-height) - 8px);
 
