--- a/src/app/item-actions/ItemMoveLocations.m.scss
+++ b/src/app/item-actions/ItemMoveLocations.m.scss
@@ -30,8 +30,7 @@
   cursor: pointer;
   position: relative;
   display: flex;
-  align-content: center;
-  justify-content: center;
+  place-content: center;
   align-items: center;
   height: 36px;
   width: 36px;
