--- a/src/app/item-popup/WeaponDeepsightInfo.m.scss
+++ b/src/app/item-popup/WeaponDeepsightInfo.m.scss
@@ -5,9 +5,8 @@
   padding: 4px 10px;
   gap: 4px;
   background: var(--theme-item-popup-panel-bg);
-  justify-content: center;
+  place-content: stretch center;
   align-items: center;
-  align-content: stretch;
 
   :global(.objective-progress) {
     background: var(--theme-item-popup-progress-bar-bg);
