--- a/src/app/dim-ui/SheetHorizontalScrollContainer.m.scss
+++ b/src/app/dim-ui/SheetHorizontalScrollContainer.m.scss
@@ -1,8 +1,7 @@
 .horizontalScrollContainer {
   flex: 1;
   white-space: nowrap;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: auto hidden;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
