--- a/src/app/dim-ui/VirtualList.m.scss
+++ b/src/app/dim-ui/VirtualList.m.scss
@@ -1,8 +1,7 @@
 .scrollContainer {
   height: 100%;
   width: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden auto;
   contain: strict;
   box-sizing: border-box;
 }
