--- a/src/app/loadout/LoadoutView.m.scss
+++ b/src/app/loadout/LoadoutView.m.scss
@@ -40,6 +40,16 @@
   display: flex;
   flex-flow: row wrap;
   column-gap: 8px;
+  > * {
+    opacity: 0;
+    animation: 0.2s linear 0s forwards fade-in;
+  }
+}
+
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
 }
 
 .finding {
