--- a/src/app/loadout-builder/LoadoutBuilder.m.scss
+++ b/src/app/loadout-builder/LoadoutBuilder.m.scss
@@ -83,3 +83,32 @@
   --item-size: 47px;
   --loadout-edit-subclass-columns: 4;
 }
+
+.referenceTiersInfo {
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 10px;
+  position: relative;
+  max-width: 800px;
+
+  .header {
+    display: flex;
+    flex-flow: row wrap;
+    font-size: 14px;
+    column-gap: 20px;
+  }
+}
+
+.dismissButton {
+  composes: resetButton from '../dim-ui/common.m.scss';
+  padding: 12px 12px 12px 12px;
+  color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  > :global(.app-icon) {
+    height: 24px;
+    width: 24px;
+    font-size: 24px;
+  }
+  position: absolute;
+  right: 0;
+  top: 0;
+}
