--- a/src/app/inventory-page/StoreBucket.scss
+++ b/src/app/inventory-page/StoreBucket.scss
@@ -68,7 +68,7 @@
     color: #999;
   }
 
-  .weapon-grouping-icon {
+  .weapon-grouping-icon-wrapper {
     box-sizing: border-box !important;
     display: flex;
     align-items: center;
@@ -77,6 +77,13 @@
     height: calc((var(--item-size) + ((var(--item-size) / 5) + 4px) - 1px));
     font-size: calc(var(--item-size) * 0.4);
     color: #999;
+
+    .element-icon {
+      width: 40%;
+      height: 0;
+      padding-bottom: 40%;
+      margin: 0;
+    }
   }
 }
 
