--- a/src/app/loadout/loadout-ui/LoadoutMods.m.scss
+++ b/src/app/loadout/loadout-ui/LoadoutMods.m.scss
@@ -36,11 +36,9 @@
   height: var(--item-icon-size);
   width: var(--item-icon-size);
 
-  &:focus {
+  &:hover,
+  &:focus-visible {
     border-color: var(--theme-accent-primary);
-  }
-
-  &:hover {
     color: white;
   }
 }
