--- a/src/app/utils/temp-container.scss
+++ b/src/app/utils/temp-container.scss
@@ -1,3 +1,5 @@
+@use '../variables.scss' as *;
+
 #temp-container {
   // Position this at the very top of the screen. Most things won't care
   // (they're absolutely positioned themselves, but @textcomplete doesn't know
@@ -7,5 +9,5 @@
   top: 0;
   width: 100%;
   // Make sure things in the temp container display above others
-  z-index: 1000;
+  z-index: $tempContainerZindex;
 }
