--- a/src/app/notifications/NotificationsContainer.m.scss
+++ b/src/app/notifications/NotificationsContainer.m.scss
@@ -5,7 +5,7 @@
 
   @include below-header;
   right: 0;
-  z-index: 1000;
+  z-index: $tempContainerZindex + 1;
   padding: 8px;
   box-sizing: border-box;
   width: 100%;
