Fix padding on plug editor

--- a/src/app/dim-ui/TileGrid.m.scss
+++ b/src/app/dim-ui/TileGrid.m.scss
@@ -4,7 +4,8 @@
   font-weight: 600;
   font-size: 14px;
   text-transform: uppercase;
-  margin-bottom: 6px;
+  margin-top: 16px;
+  margin-bottom: 8px;
 }
 
 .items {
