--- a/src/app/dim-ui/CollapsibleTitle.scss
+++ b/src/app/dim-ui/CollapsibleTitle.scss
@@ -9,6 +9,11 @@
   font-family: inherit;
   width: 100%;
 
+  > button {
+    all: initial;
+    font-family: inherit;
+  }
+
   padding: 0 16px;
   background-color: rgba(0, 0, 0, 0.2);
   color: var(--theme-text);
