--- a/src/app/records/PresentationNode.m.scss
+++ b/src/app/records/PresentationNode.m.scss
@@ -29,14 +29,14 @@
 .nodeProgressBar {
   background: #666;
   height: 2px;
-  width: 8em;
+  width: 8rem;
   margin-top: 2px;
 }
 .nodeProgressBarAmount {
   background: #ccc;
   height: 100%;
 
-  :global(.title.completed) & {
+  :global(.completed) & {
     background: $gold;
   }
 }
