--- a/src/app/character-tile/CharacterTile.m.scss
+++ b/src/app/character-tile/CharacterTile.m.scss
@@ -6,6 +6,7 @@
   height: $emblem-height;
   max-width: $emblem-width;
   overflow: hidden;
+  text-align: left;
 
   display: grid;
   grid-template-areas:
