--- a/src/app/dim-ui/common.m.scss
+++ b/src/app/dim-ui/common.m.scss
@@ -24,6 +24,7 @@
   cursor: pointer;
   font-size: inherit;
   font-family: inherit;
+  user-select: none;
   &:disabled {
     cursor: default;
   }
