--- a/src/app/dim-ui/CollapsibleTitle.m.scss
+++ b/src/app/dim-ui/CollapsibleTitle.m.scss
@@ -62,9 +62,10 @@
   }
 
   &.disabled {
+    color: #888;
     > button {
+      color: #888 !important;
       cursor: default;
-      color: #888;
     }
   }
 }
