--- a/src/app/records/CollectiblesGrid.m.scss
+++ b/src/app/records/CollectiblesGrid.m.scss
@@ -5,7 +5,7 @@
   gap: 4px;
   margin: 6px 10px 8px;
 
-  /* margin exception because plugset doesn't have an always-expanded parent */
+  /* Collections leaf nodes need less padding */
   :global(.always-expanded) & {
     margin: 2px 0 8px;
   }
