--- a/src/app/inventory-page/StoreBuckets.m.scss
+++ b/src/app/inventory-page/StoreBuckets.m.scss
@@ -10,7 +10,7 @@
   opacity: 0.8;
   margin: 0;
   padding: 0 var(--inventory-column-padding);
-  background: none; // comment out to add background background
+  gap: 0.5em;
 }
 
 .postmasterFull {
