--- a/src/app/dim-ui/CollapsibleTitle.m.scss
+++ b/src/app/dim-ui/CollapsibleTitle.m.scss
@@ -74,6 +74,7 @@
   font-size: 16px;
   width: 10px;
   transition: transform 0.1s ease-in-out;
+  line-height: 8px;
   &.iconCollapsed {
     transform: rotate(-90deg);
   }
