--- a/src/app/loadout-builder/filter/StatConstraintEditor.m.scss
+++ b/src/app/loadout-builder/filter/StatConstraintEditor.m.scss
@@ -17,7 +17,7 @@
   opacity: 0.5;
   font-size: 10px;
   padding-left: 10px;
-  padding-top: 8px;
+  padding-top: 4px;
   align-self: stretch;
   composes: flexRow from '../../dim-ui/common.m.scss';
   align-items: flex-start;
@@ -71,7 +71,7 @@
 .statBar {
   grid-area: bar;
   composes: flexRow from '../../dim-ui/common.m.scss';
-  margin-left: 4px;
+  margin: 4px 0 2px 4px;
   gap: 2px;
 }
 
@@ -115,7 +115,7 @@
 
 .rowControl {
   composes: resetButton from '../../dim-ui/common.m.scss';
-  padding: 4px 6px;
+  padding: 0 6px;
   opacity: 0.9;
 
   .ignored &,
