Make the stats stand out on various themes

--- a/src/app/themes/_theme-neomuna.scss
+++ b/src/app/themes/_theme-neomuna.scss
@@ -56,7 +56,7 @@
   --theme-header-nav-bg: #0b2432;
   --theme-header-nav-slideout-menu-bg: var(--theme-fill-modal);
   --theme-header-characters-bg: #10364d;
-  --theme-header-characters-txt: #aaa;
+  --theme-header-characters-txt: rgba(255, 255, 255, 0.625);
 
   // Dropdown menu
   --theme-dropdown-menu-bg: var(--theme-fill-modal);
