--- a/src/app/themes/_theme-throneworld.scss
+++ b/src/app/themes/_theme-throneworld.scss
@@ -49,7 +49,7 @@
   --theme-header-nav-bg: #1b422c;
   --theme-header-nav-slideout-menu-bg: var(--theme-fill-modal);
   --theme-header-characters-bg: #265c42;
-  --theme-header-characters-txt: #ccc;
+  --theme-header-characters-txt: rgba(255, 255, 255, 0.8);
 
   // Dropdown menu
   --theme-dropdown-menu-bg: var(--theme-fill-modal);
