--- a/src/app/themes/_theme-vexnet.scss
+++ b/src/app/themes/_theme-vexnet.scss
@@ -54,7 +54,7 @@
   --theme-header-nav-bg: #0d2f63;
   --theme-header-nav-slideout-menu-bg: var(--theme-fill-modal);
   --theme-header-characters-bg: #204c74;
-  --theme-header-characters-txt: #aaa;
+  --theme-header-characters-txt: rgba(255, 255, 255, 0.625);
 
   // Dropdown menu
   --theme-dropdown-menu-bg: var(--theme-fill-modal);
