--- a/src/app/themes/_theme.scss
+++ b/src/app/themes/_theme.scss
@@ -51,7 +51,7 @@
   --theme-header-nav-bg: var(--theme-app-bg-gradient);
   --theme-header-nav-slideout-menu-bg: var(--theme-fill-modal);
   --theme-header-characters-bg: var(--theme-app-bg-gradient);
-  --theme-header-characters-txt: #ccc;
+  --theme-header-characters-txt: rgba(255, 255, 255, 0.8);
 
   // Dropdown menu
   --theme-dropdown-menu-bg: var(--theme-fill-modal);
