--- a/src/app/store-stats/CharacterStats.scss
+++ b/src/app/store-stats/CharacterStats.scss
@@ -111,6 +111,8 @@
       color: var(--theme-header-characters-txt);
       &.boostedValue {
         color: $stat-modded;
+        font-weight: bold;
+        text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
       }
       .phone-portrait & {
         font-size: 12px;
