--- a/src/app/themes/_theme-europa.scss
+++ b/src/app/themes/_theme-europa.scss
@@ -54,7 +54,7 @@
   --theme-header-nav-bg: #1d2b5e;
   --theme-header-nav-slideout-menu-bg: var(--theme-fill-modal);
   --theme-header-characters-bg: #2a418f;
-  --theme-header-characters-txt: #aaa;
+  --theme-header-characters-txt: rgba(255, 255, 255, 0.625);
 
   // Dropdown menu
   --theme-dropdown-menu-bg: var(--theme-fill-modal);
