More changes to bring LO in line with Loadout Editor

--- a/src/app/loadout-builder/LoadoutBucketDropTarget.m.scss
+++ b/src/app/loadout-builder/LoadoutBucketDropTarget.m.scss
@@ -1,5 +1,6 @@
 .canDrop {
-  outline: 1px solid #666;
+  outline: 1px solid white;
+  outline-offset: 4px;
   &.over {
     outline: 1px solid var(--theme-accent-primary);
   }
