--- a/src/app/loadout/plug-drawer/SelectablePlug.m.scss
+++ b/src/app/loadout/plug-drawer/SelectablePlug.m.scss
@@ -9,3 +9,23 @@
     display: none;
   }
 }
+
+.icon {
+  composes: flexColumn from '../../dim-ui/common.m.scss';
+  align-items: center;
+  gap: 4px;
+}
+
+.stack {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.buttons {
+  composes: flexRow from '../../dim-ui/common.m.scss';
+  gap: 4px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 4px;
+}
